--- a/package.json
+++ b/package.json
@@ -1,26 +1,32 @@
 {
-  "name": "next-contentlayer-example",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "contentlayer": "latest",
-    "date-fns": "2.29.3",
-    "next": "13.1.6",
-    "next-contentlayer": "latest",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@types/react": "18.0.28",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "typescript": "4.9.5"
-  }
+	"name": "next-contentlayer-example",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"contentlayer": "latest",
+		"date-fns": "2.29.3",
+		"next": "13.1.6",
+		"next-contentlayer": "latest",
+		"next-themes": "^0.2.1",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-pretty-code": "^0.9.4",
+		"rehype-slug": "^5.1.0",
+		"remark-gfm": "^3.0.1",
+		"shiki": "^0.14.1"
+	},
+	"devDependencies": {
+		"@tailwindcss/typography": "^0.5.9",
+		"@types/react": "18.0.28",
+		"autoprefixer": "^10.4.13",
+		"postcss": "^8.4.21",
+		"tailwindcss": "^3.2.6",
+		"typescript": "4.9.5"
+	}
 }
